Sistemate imprecisioni (prima versione)

--- a/main.tex
+++ b/main.tex
@@ -800,7 +800,9 @@ Lo scopo dei semafori è quello di:
 Descrizione e confronto tra gestione a controllo di programma e gestione a interruzioni di dispositivi di I/O.
 \end{problem}
 \begin{solution}
-Per gestire dispositivi di I/O vengono utilizzate interfacce, con il compito sia di mascherare la complessità della periferica (astrazione per l’utente), sia di garantire l’accesso alle periferiche e il loro funzionamento. 
+Per gestire dispositivi di I/O vengono utilizzate interfacce, con il compito sia di mascherare la complessità della periferica (astrazione per l’utente), sia di garantire l’accesso alle periferiche e il loro funzionamento.
+\newline
+\newline
 Un altro compito del sottosistema di I/O è quello di naming, relativo alla definizione di uno spazio di nomi tramite i quali i singoli dispositivi vengono identificati univocamente dai processi che su essi devono operare.
 \newline
 Viene definito processo esterno un processo svolto da un’interfaccia fisica che opera in parallelo alla CPU, sui dispositivi di I/O, e come processo applicativo un processo in esecuzione dalla CPU, col compito di inviare comandi all’interfaccia di un dispositivo di I/O.
